ajustes no parques

--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -79,17 +79,22 @@
                             entre amigos ou em um jantar romântico a dois.</p>
                         <div class="auto"> 4,6 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
-                    <div class="list">
-                        <div>
+                    <div class="DesAva">
+                        <div class="list">
                             <ul>
                                 <li> Horario de funcionamento : 12:00 - 21:00</li>
                                 <li> Melhor dia para visitação : Segunda</li>
                                 <li> Horários de maior procura : 17:00 - 19:00 (sab)</li>
-                                <li> Preços a partir de : R$ 35,00</li>
+                                <li> Preços a partir de : R$ 7,00</li>
                                 <li> Telefona para contato : (11) 3055-4702 ou 3055-4700</li>
                                 <li> Site : <a href="https://www.hotelunique.com/pt/restaurante-bar/skye/"
                                         target="_blank">https://www.hotelunique.com/pt/restaurante-bar/skye</a></li>
                             </ul>
+                        </div>
+                        <div>
+                            <form action="http://www.hotelunique.com/cardapios/" target="_blank">
+                                <input type="submit" name="Cardapiobb" class="btn" value="Confira nosso Cardápio">
+                            </form>
                         </div>
                     </div>
                     <h3>Localização :</h3>
@@ -123,7 +128,7 @@
                                 <li> Horario de funcionamento : 16:00 - 21:00</li>
                                 <li> Melhor dia para visitação : Quarta</li>
                                 <li> Horários de maior procura : 17:00 - 21:00 (sab)</li>
-                                <li> Preços aplicados </li>
+                                <li> Preços a partir de : R$ 35,00</li>
                                 <li> Site : <a href="http://www.velosobar.com.br/sobre-o-veloso.php"
                                         target="_blank">http://www.velosobar.com.br/sobre-o-veloso.php</a>
                                 </li>
@@ -160,11 +165,13 @@
                     </div>
                     <div class="list">
                         <ul>
-                            <li> Horario de funcionamento: Sab 23:00h às 7:00h Qui: 23:00h às 7:00h Sex: 23:00h às 7:00h </li>
-                            <li> Melhor dia para visitação </li>
-                            <li> Horários de maior procura </li>
-                            <li> Preços aplicados </li>
-                            <li>Site : <a href="http://d-edge.com.br/" target="_blank">http://d-edge.com.br</a></li>
+                            <li> Horario de funcionamento: Sab 23:00h às 7:00h Qui: 23:00h às 7:00h Sex: 23:00h às 7:00h
+                            </li>
+                            <li> Melhor dia para visitação: Sabado </li>
+                            <li> Horários de maior procura: 23:00h às 3:00h </li>
+                            <li> Preços a partir de : R$ 40,00</li>
+                            <li> Temporariamente fechado devido ao momento que estamos na Pandemia</li>
+                            <li>Site :<a href="http://d-edge.com.br/" target="_blank">http://d-edge.com.br</a></li>
                         </ul>
                     </div>
                     <h3>Localização :</h3>
@@ -198,21 +205,22 @@
                     <div class="DesAva">
                         <div class="list">
                             <ul>
-                                <li> Horario de funcionamento : 13:00 - 21:00</li>
-                                <li> Melhor dia para visitação </li>
-                                <li> Horários de maior procura : Sábados</li>
-                                <li> Preços aplicados </li>
-                                <li>Telefone para contato: (11) 3868-9944</li>
+                                <li>Horario de funcionamento : Sábados 20:00h - 08:00h Domingos 17:00h ás 06:00h</li>
+                                <li>Melhor dia para visitação: Sábados</li>
+                                <li>Horários de maior procura :22:00h ás 05:00h</li>
+                                <li> Preços a partir de : R$ 35,00</li>
+                                <li>Telefone para contato: (11) 3868-5858</li>
+                                <li>Temporariamente fechado devido ao momento que estamos na Pandemia</li>
                                 <li>Instagram oficial:<a href="https://www.instagram.com/theweekoficial/?hl=pt-br"
-                                        target="_blank"> The Week</a> </li>
+                                        target="_blank">The Week</a> </li>
                             </ul>
                         </div>
-                        <div>
-                        </div>
                     </div>
-                    <h3>Localização :</h3>
-                    <p> R. Guaicurus, 324 - Lapa, São Paulo</p>
+                    <div>
+                        <h3>Localização :</h3>
+                        <p>Rua Guaicurus, 324 - Lapa, São Paulo</p>
 
+                    </div>
                     <div class="mapa">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.267011141381!2d-46.69027668502295!3d-23.522896984702033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef80cc725c0fd%3A0x7d565f932ef76f16!2sThe%20Week%20Brazil!5e0!3m2!1spt-BR!2sbr!4v1622497695501!5m2!1spt-BR!2sbr"></iframe>
@@ -223,29 +231,34 @@
                     <img src="img/vida-noturna/Villa-Country.jpg" alt="Villa-Country">
                     <h2>Villa Country</h2>
                     <hr>
-                    <div>
+                    <div class="DesAva">
+                        <!--Descrição e Avaliação-->
                         <p>Inspirada na cultura dos cowboys do western, a Villa Country possui 12 mil metros quadrados
                             divididos em vários ambientes que remetem o visitante ao velho oeste americano. É muito mais
                             do que uma casa de shows, pois concentra restaurante, pista de dança, camarotes e centro de
                             convenções. Ambientes diferenciados, como o Salão, as praças Sertaneja, Caipira e do Cavalo,
                             dão o tom temático ao lugar.</p>
-                        Classificação
+                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
-                    <div class="local">
-                        <div>
+                    <div class="DesAva">
+                        <div class="list">
                             <ul>
-                                <li> Horario de funcionamento Apenas aos sábados e domingos das 13:00 às 14:00. </li>
-                                <li> Melhor dia para visitação </li>
-                                <li> Horários de maior procura </li>
-                                <li> Preços aplicados </li>
+                                <li>Horario de funcionamento : Sábados 14:00h ás 22:00h</li>
+                                <li>Melhor dia para visitação: Sábados</li>
+                                <li>Horários de maior procura :18:00h ás 21:00h</li>
+                                <li> Preços a partir de : R$ 20,00</li>
+                                <li>Telefone para contato: (11) 3868-9944</li>
+                                <li>Temporariamente fechado devido ao momento que estamos na Pandemia</li>
                                 <li>Site oficial:<a href="https://villacountry.com.br/" target="_blank">
                                         www.villacountry.com.br</a> </li>
                             </ul>
                         </div>
-                        <div class="mapa">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.1264997749395!2d-46.672488185022864!3d-23.527952184699526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5802fdab9fd7%3A0x8f19e039ceb9e889!2sVilla%20Country!5e0!3m2!1spt-BR!2sbr!4v1622497874251!5m2!1spt-BR!2sbr"></iframe>
-                        </div>
+                    </div>
+                    <h3>Localização :</h3>
+                    <p> Av. Francisco Matarazzo, 774 - Água Branca, São Paulo</p>
+                    <div class="mapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.1264997749395!2d-46.672488185022864!3d-23.527952184699526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5802fdab9fd7%3A0x8f19e039ceb9e889!2sVilla%20Country!5e0!3m2!1spt-BR!2sbr!4v1622497874251!5m2!1spt-BR!2sbr"></iframe>
                     </div>
                 </div>
             </div>
