--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="js/style.js"></script>
     <title>Document</title>
 </head>
 
@@ -28,8 +29,8 @@
             <h2>Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h2>
             <p>Nossa missão é facilitar sua experiência de buscar por roteiros de viagens. Aqui estão selecionados os
                 melhores parques urbanos, bares e boates de São Paulo.</p>
+                <div class="box">
 
-        </div>
     </div>
     <footer class="rodape2">
         <p class="fim">Copyright &copy; Traveller 2021 </p>
