--- a/parques.html
+++ b/parques.html
@@ -76,8 +76,8 @@
                                         target="_blank">https://jardimbotanico.sp.gov.br/</a></li>
                             </ul>
                         </div>
-                        <div>
-                            <a href="http://www.ibot.sp.gov.br/jardim/tour%20virtual/index.html" target="_blank">PASSEIO
+                        <div class="btn">
+                            <a href="http://www.ibot.sp.gov.br/jardim/tour%20virtual/index.html" target="_blank" class="textBtn">PASSEIO
                                 VIRTUAL</a>
                         </div>
                     </div>
