--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -50,10 +50,8 @@
                                 </li>
                             </ul>
                         </div>
-                        <div>
-                            <form action="https://barbrahmacentro.namesa.online/home" target="_blank">
-                                <input type="submit" name="Cardapiobb" class="btn" value="Confira nosso Cardápio">
-                            </form>
+                        <div class="btn">
+                           <a href="https://barbrahmacentro.namesa.online/home" class="textBtn">Confira nosso Cardápio</a>
                         </div>
                     </div>
                     <h3>Localização :</h3>
@@ -91,10 +89,8 @@
                                         target="_blank">https://www.hotelunique.com/pt/restaurante-bar/skye</a></li>
                             </ul>
                         </div>
-                        <div>
-                            <form action="http://www.hotelunique.com/cardapios/" target="_blank">
-                                <input type="submit" name="Cardapiobb" class="btn" value="Confira nosso Cardápio">
-                            </form>
+                        <div class="btn">
+                            <a href="http://www.hotelunique.com/cardapios" class="textBtn">Confira nosso Cardápio</a>
                         </div>
                     </div>
                     <h3>Localização :</h3>
@@ -134,10 +130,8 @@
                                 </li>
                             </ul>
                         </div>
-                        <div>
-                            <form action="http://www.velosobar.com.br/cardapio.php" target="_blank">
-                                <input type="submit" name="Cardapiovl" class="btn" value="Confira nosso Cardápio">
-                            </form>
+                        <div class="btn">
+                            <a href="http://www.velosobar.com.br/cardapio.php" class="textBtn">Confira nosso Cardápio</a>
                         </div>
                     </div>
                     <h3>Localização :</h3>
