criação da pag quem somos

--- a/parques.html
+++ b/parques.html
@@ -19,6 +19,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li class="select2"><a href="parques.html">Parques</a></li>
                     <li><a href="vidanoturna.html">Vida Noturna</a></li>
+                    <li><a href="quemSomos.html">Quem Somos</a></li>
                 </ul>
             </nav>
         </div>
