--- a/quemSomos.html
+++ b/quemSomos.html
@@ -24,6 +24,49 @@
             </nav>
         </div>
         <div class="quadro">
+            <div class="panaceia">
+                <img src="img/grupo/logo.png" alt="panaceia">
+                <h1>Panace I.A</h1>
+            </div>
+            <p>Somos um grupo de estudantes universitários do curso de Análise e Desenvolvimento de Sistemas denominado Panace I.A</p>
+            <div class="box2">
+                <div class="card">
+                    <img src="./img/grupo/jonathan.jpg" alt="Jonathan Felix">
+                    <hr>
+                    <h2>Jonathan Felix</h2>
+                    <h3>Rm88082</h3>
+                    <p>Back End</p>
+                </div>
+                <div class="card">
+                    <img src="./img/grupo/Luan.jpg" alt="Luan de Oliveira">
+                    <hr>
+                    <h2>Luan de Oliveira</h2>
+                    <h3>RM89352</h3>
+                    <p>Banco de Dados</p>
+    
+                </div>
+                <div class="card">
+                    <img src="./img/grupo/MarcosMaciel.jpeg" alt="Marcos Maciel">
+                    <hr>
+                    <h2>Marcos Maciel</h2>
+                    <h3>Rm88267</h3>
+                    <p>Chatbot</p>
+                </div>
+                <div class="card">
+                    <img src="./img/grupo/MarcosVinicius.jpeg" alt="Maros Vinicius">
+                    <hr>
+                    <h2>Marcos Vinicius</h2>
+                    <h3>Rm86904</h3>
+                    <p>Gestor do projeto</p>
+                </div>
+                <div class="card">
+                    <img src="./img/grupo/Akemi.jpg" alt="Vitoria Akemi">
+                    <hr>
+                    <h2>Vitoria Akemi</h2>
+                    <h3>Rm88077</h3>
+                    <p>Front End</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
