ajustes no home

--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
         </div>
         <div class="quadro">
             <img src="img/aviao-e-aeronave-imagem-animada.gif">
-            <h1>Bem vindo ao projeto Traveller!</h1>
-            <h2>Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h2>
+            <h3>Bem vindo ao projeto Traveller!</h3>
+            <h3>Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h3>
             <p>Nossa missão é facilitar sua experiência de buscar por roteiros de viagens. Aqui estão selecionados os
                 melhores parques urbanos, bares e boates de São Paulo.</p>
-                <div class="box">
+                <div class="container1">
+                    <div class="photoWrapper">
+                        <img class='photo'src="./img/parques/bosuqe.jpg" alt="bosque" />
+                    </div>
+                    <div class="photoWrapper">
+                        <img class='photo'src="./img/parques/parque-escuro.jpg" alt="parque" />
+                    </div>
+                    <div class="photoWrapper">
+                        <img class='photo'src="./img/background/campo.jpg"alt="" />
+                    </div>
+                    <div class="photoWrapper">
+                        <img class='photo'src="./img/parques/parque-alfredo-volpi.jpg" alt="" />
+                    </div>
+                </div>
         </div>
-        <div class="container1">
-            <div class="photoWrapper">
-                <img class='photo'src="./img/parques/bosuqe.jpg" alt="" />
-            </div>
-            <div class="photoWrapper">
-                <img class='photo'src="./img/parques/parque-escuro.jpg" alt="" />
-            </div>
-            <div class="photoWrapper">
-                <img class='photo'src="./img/parques/parque-da-independencia.jpg"alt="" />
-            </div>
-            <div class="photoWrapper">
-                <img class='photo'src="./img/parques/parque-alfredo-volpi.jpg" alt="" />
-            </div>
-        </div>
+    
     </div>
     <footer class="rodape2">
         <p class="fim">Copyright &copy; Traveller 2021 </p>
