ajuste no slider

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
         </div>
         <div class="quadro">
             <img src="img/aviao-e-aeronave-imagem-animada.gif">
-            <h3>Bem vindo ao projeto Traveller!</h3>
-            <h3>Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h3>
-            <p>Nossa missão é facilitar sua experiência de buscar por roteiros de viagens. Aqui estão selecionados os
+            <h3 class="tamanho">Bem vindo ao projeto Traveller!</h3>
+            <h3 class="tamanho">Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h3>
+            <p class="tamanho">Nossa missão é facilitar sua experiência de buscar por roteiros de viagens. Aqui estão selecionados os
                 melhores parques urbanos, bares e boates de São Paulo.</p>
                 <div class="container1">
                     <div class="photoWrapper">
-                        <img class='photo'src="./img/parques/bosuqe.jpg" alt="bosque" />
+                        <img class='photo' src="./img/slider/bosuqe.jpg" alt="bosque" />
                     </div>
                     <div class="photoWrapper">
-                        <img class='photo'src="./img/parques/parque-escuro.jpg" alt="parque" />
+                        <img class='photo' src="./img/slider/parque-escuro.jpg" alt="parque" />
                     </div>
                     <div class="photoWrapper">
-                        <img class='photo'src="./img/background/campo.jpg"alt="" />
+                        <img class='photo' src="./img/slider/jardim-botanico.jpg"alt="jardim botanico" />
                     </div>
                     <div class="photoWrapper">
-                        <img class='photo'src="./img/parques/parque-alfredo-volpi.jpg" alt="" />
+                        <img class='photo' src="./img/slider/dedge.jpg" alt="dedge" />
                     </div>
                 </div>
         </div>
