ajustes na pag quem somos

--- a/quemSomos.html
+++ b/quemSomos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Quem Somos</title>
 </head>
 
 <body>
@@ -26,9 +26,10 @@
         <div class="quadro">
             <div class="panaceia">
                 <img src="img/grupo/logo.png" alt="panaceia">
-                <h1>Panace I.A</h1>
+                <h5>Panace I.A</h5>
             </div>
-            <p>Somos um grupo de estudantes universitários do curso de Análise e Desenvolvimento de Sistemas denominado Panace I.A</p>
+            <p class="tamanho">Somos um grupo de estudantes universitários do curso de Análise e Desenvolvimento de Sistemas denominado
+                Panace I.A</p>
             <div class="box2">
                 <div class="card">
                     <img src="./img/grupo/jonathan.jpg" alt="Jonathan Felix">
@@ -41,9 +42,9 @@
                     <img src="./img/grupo/Luan.jpg" alt="Luan de Oliveira">
                     <hr>
                     <h2>Luan de Oliveira</h2>
-                    <h3>RM89352</h3>
+                    <h3>Rm89352</h3>
                     <p>Banco de Dados</p>
-    
+
                 </div>
                 <div class="card">
                     <img src="./img/grupo/MarcosMaciel.jpeg" alt="Marcos Maciel">
@@ -69,5 +70,9 @@
             </div>
         </div>
     </div>
+    <footer class="rodape3">
+        <p class="fim">Copyright &copy; Traveller 2021 </p>
+    </footer>
 </body>
+
 </html>
