--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
             </div>
         </div>
     </div>
-    <footer class="rodape rodape2">
+    <footer class="rodape2">
         <p class="fim">Copyright &copy; Traveller 2021 </p>
     </footer>
 </body>
