--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <li class="select3"><a href="index.html">Home</a></li>
                     <li><a href="parques.html">Parques</a></li>
                     <li><a href="vidanoturna.html">Vida Noturna</a></li>
+                    <li><a href="quemSomos.html">Quem Somos</a></li>
                 </ul>
             </nav>
         </div>
