--- a/login.html
+++ b/login.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/style.js" defer></script>
-    <title>Document</title>
+    <title>Login</title>
 </head>
 
 <body>
     <div class="container" id="home">
         <div class="logo">
-            Projeto Traveller
+            <span>Projeto Traveller</span>
         </div>
         <div class="quadro">
             <h1>Seja Bem vindo ao projeto Traveller!</h1>
