--- a/quemSomos.html
+++ b/quemSomos.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container" id="somos">
         <div class="logo">
-            Projeto Traveller
+            <span>Projeto Traveller</span>
         </div>
         <div class="menu">
             <nav>
