--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Vida Noturna</title>
 </head>
 
 <body>
     <div class="container" id="noite">
         <div class="logo">
-            Projeto Traveller
+            <span>Projeto Traveller</span>
         </div>
         <div class="menu">
             <nav>
