ajuste login e imagens

--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -43,16 +43,19 @@
                         <!--lista e botao cardapio-->
                         <div class="list">
                             <ul>
-                                <li>Horario de funcionamento : 11:00 - 21:00 </li>
+                                <li>Horario de funcionamento : 11:00h - 21:00h </li>
                                 <li>Melhor dia para visitação : Domingo </li>
-                                <li>Horários de maior procura : 14:00 - 18:00 (sab)</li>
+                                <li>Horários de maior procura : 14:00h - 18:00h (sab)</li>
                                 <li>Preços a partir de : R$ 6,00 </li>
-                                <li>Site : <a href="https://www.barbrahmacentro.com">https://www.barbrahmacentro.com</a>
+                                <li> Telefona para contato :(11) 94746-1951</li>
+                                <li>Site: <a href="https://www.barbrahmacentro.com"
+                                        target="_blank">https://www.barbrahmacentro.com</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="btn">
-                           <a href="https://barbrahmacentro.namesa.online/home" class="textBtn">Confira nosso Cardápio</a>
+                            <a href="https://barbrahmacentro.namesa.online/home" target="_blank" class="textBtn">Confira
+                                nosso Cardápio</a>
                         </div>
                     </div>
                     <h3>Localização :</h3>
@@ -81,17 +84,18 @@
                     <div class="DesAva">
                         <div class="list">
                             <ul>
-                                <li> Horario de funcionamento : 12:00 - 21:00</li>
-                                <li> Melhor dia para visitação : Segunda</li>
-                                <li> Horários de maior procura : 17:00 - 19:00 (sab)</li>
+                                <li>Horario de funcionamento : 12:00h - 21:00h</li>
+                                <li>Melhor dia para visitação: Segunda</li>
+                                <li>Horários de maior procura :17:00h - 19:00h (sab)</li>
                                 <li> Preços a partir de : R$ 7,00</li>
-                                <li> Telefona para contato : (11) 3055-4702 ou 3055-4700</li>
-                                <li> Site : <a href="https://www.hotelunique.com/pt/restaurante-bar/skye/"
-                                        target="_blank">https://www.hotelunique.com/pt/restaurante-bar/skye</a></li>
+                                <li>Telefone para contato: (11) 3055-4702 ou 3055-4700</li>
+                                <li> Site: <a href="https://www.hotelunique.com/pt/restaurante-bar/skye/"
+                                    target="_blank">www.restaurante-bar/skye</a></li>
                             </ul>
                         </div>
                         <div class="btn">
-                            <a href="http://www.hotelunique.com/cardapios" class="textBtn">Confira nosso Cardápio</a>
+                            <a href="http://www.hotelunique.com/cardapios"target="_blank" class="textBtn">Confira
+                                nosso Cardápio</a>
                         </div>
                     </div>
                     <h3>Localização :</h3>
@@ -109,7 +113,7 @@
                 <div class="bloco">
                     <!--veloso-->
                     <img src="img/vida-noturna/veloso.jpg" alt="veloso">
-                    <h2>Veloso</h2>
+                    <h2>Veloso Bar</h2>
                     <hr>
                     <div class="DesAva">
                         <!--Descrição e Avaliação-->
@@ -122,17 +126,18 @@
                     <div class="DesAva">
                         <div class="list">
                             <ul>
-                                <li> Horario de funcionamento : 16:00 - 21:00</li>
+                                <li> Horario de funcionamento : 16:00h - 21:00h</li>
                                 <li> Melhor dia para visitação : Quarta</li>
-                                <li> Horários de maior procura : 17:00 - 21:00 (sab)</li>
+                                <li> Horários de maior procura : 17:00h - 21:00h(sab)</li>
                                 <li> Preços a partir de : R$ 35,00</li>
-                                <li> Site : <a href="http://www.velosobar.com.br/sobre-o-veloso.php"
-                                        target="_blank">http://www.velosobar.com.br/sobre-o-veloso.php</a>
+                                <li> Site: <a href="http://www.velosobar.com.br/sobre-o-veloso.php"
+                                        target="_blank">www.velosobar.com.br/sobre-o-veloso.php</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="btn">
-                            <a href="http://www.velosobar.com.br/cardapio.php" class="textBtn">Confira nosso Cardápio</a>
+                            <a href="http://www.velosobar.com.br/cardapio.php" target="_blank" class="textBtn">Confira
+                                nosso Cardápio</a>
                         </div>
                     </div>
                     <h3>Localização :</h3>
@@ -160,13 +165,13 @@
                     </div>
                     <div class="list">
                         <ul>
-                            <li> Horario de funcionamento: Sab 23:00h às 7:00h Qui: 23:00h às 7:00h Sex: 23:00h às 7:00h
+                            <li> Horario de funcionamento: Qui, Sex, Sab das 23:00h - 7:00h
                             </li>
                             <li> Melhor dia para visitação: Sabado </li>
-                            <li> Horários de maior procura: 23:00h às 3:00h </li>
+                            <li> Horários de maior procura: 23:00h - 3:00h </li>
                             <li> Preços a partir de : R$ 40,00</li>
                             <li> Temporariamente fechado devido ao momento que estamos na Pandemia</li>
-                            <li>Site :<a href="http://d-edge.com.br/" target="_blank">http://d-edge.com.br</a></li>
+                            <li>Site: <a href="http://d-edge.com.br/" target="_blank">www.d-edge.com.br</a></li>
                         </ul>
                     </div>
                     <h3>Localização :</h3>
@@ -200,13 +205,13 @@
                     <div class="DesAva">
                         <div class="list">
                             <ul>
-                                <li>Horario de funcionamento : Sábados 20:00h - 08:00h Domingos 17:00h ás 06:00h</li>
+                                <li>Horario de funcionamento : Sábados 20:00h - 08:00h Domingos 17:00h - 06:00h</li>
                                 <li>Melhor dia para visitação: Sábados</li>
-                                <li>Horários de maior procura :22:00h ás 05:00h</li>
+                                <li>Horários de maior procura :22:00h - 05:00h</li>
                                 <li> Preços a partir de : R$ 35,00</li>
                                 <li>Telefone para contato: (11) 3868-5858</li>
                                 <li>Temporariamente fechado devido ao momento que estamos na Pandemia</li>
-                                <li>Instagram oficial:<a href="https://www.instagram.com/theweekoficial/?hl=pt-br"
+                                <li>Instagram oficial: <a href="https://www.instagram.com/theweekoficial/?hl=pt-br"
                                         target="_blank">The Week</a> </li>
                             </ul>
                         </div>
@@ -238,15 +243,18 @@
                     <div class="DesAva">
                         <div class="list">
                             <ul>
-                                <li>Horario de funcionamento : Sábados 14:00h ás 22:00h</li>
+                                <li>Horario de funcionamento : Sábados 14:00h - 22:00h</li>
                                 <li>Melhor dia para visitação: Sábados</li>
-                                <li>Horários de maior procura :18:00h ás 21:00h</li>
+                                <li>Horários de maior procura :18:00h - 21:00h</li>
                                 <li> Preços a partir de : R$ 20,00</li>
                                 <li>Telefone para contato: (11) 3868-9944</li>
-                                <li>Temporariamente fechado devido ao momento que estamos na Pandemia</li>
-                                <li>Site oficial:<a href="https://villacountry.com.br/" target="_blank">
+                                <li>Site oficial: <a href="https://villacountry.com.br/" target="_blank">
                                         www.villacountry.com.br</a> </li>
                             </ul>
+                        </div>
+                        <div class="btn">
+                            <a href="https://villacountry.com.br/cardapio.php" target="_blank" class="textBtn">Confira
+                                nosso Cardápio</a>
                         </div>
                     </div>
                     <h3>Localização :</h3>
