--- a/parques.html
+++ b/parques.html
@@ -43,7 +43,7 @@
                             <li>Horario de funcionamento : 05:00 - 00:00</li>
                             <li>Telefone para contato: (11) 5574-5045</li>
                             <li>Site : <a href="https://parqueibirapuera.org/"
-                                    target="_blank">https://parqueibirapuera.org</a></li>
+                                    target="_blank">www.parqueibirapuera.org</a></li>
                         </ul>
                     </div>
                     <h3>Localização :</h3>
@@ -74,7 +74,7 @@
                                 <li> Telefone para contato : (11) 5067-6000</li>
                                 <li> Valor de entrada : R$ 10,00</li>
                                 <li> Site : <a href="https://jardimbotanico.sp.gov.br/"
-                                        target="_blank">https://jardimbotanico.sp.gov.br/</a></li>
+                                        target="_blank">www.jardimbotanico.sp.gov.br/</a></li>
                             </ul>
                         </div>
                         <div class="btn">
@@ -109,7 +109,7 @@
                             <li>Telefone para contato: (11) 3031-7052</li>
                             <li>Site : <a
                                     href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5729"
-                                    target="_blank">parque-alfredo-volpi</a>
+                                    target="_blank">www.parque-alfredo-volpi</a>
                             </li>
                         </ul>
                     </div>
@@ -138,7 +138,7 @@
                             <li> Telefone para contato : (11) 3666-8032</li>
                             <li> Site : <a
                                     href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5732"
-                                    target="_blank">parque-buenos-aires</a>
+                                    target="_blank">www.parque-buenos-aires</a>
                             </li>
                         </ul>
                     </div>
@@ -169,7 +169,7 @@
                             <li>Telefone para contato: (11) 2273-7250</li>
                             <li>Site : <a
                                     href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_sul/index.php?p=5747"
-                                    target="_blank">parque-da-independencia</a>
+                                    target="_blank">www.parque-da-independencia</a>
                             </li>
                         </ul>
                     </div>
