ajuste de indentação

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container" id="home">
         <div class="logo">
-           <span>Projeto Traveller</span>
+            <span>Projeto Traveller</span>
         </div>
         <div class="menu">
             <nav>
@@ -29,24 +29,25 @@
             <img src="img/aviao-e-aeronave-imagem-animada.gif">
             <h3 class="tamanho">Bem vindo ao projeto Traveller!</h3>
             <h3 class="tamanho">Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h3>
-            <p class="tamanho">Nossa missão é facilitar sua experiência de buscar por roteiros de viagens. Aqui estão selecionados os
+            <p class="tamanho">Nossa missão é facilitar sua experiência de buscar por roteiros de viagens. Aqui estão
+                selecionados os
                 melhores parques urbanos, bares e boates de São Paulo.</p>
-                <div class="container1">
-                    <div class="photoWrapper">
-                        <img class='photo' src="./img/slider/bosuqe.jpg" alt="bosque" />
-                    </div>
-                    <div class="photoWrapper">
-                        <img class='photo' src="./img/slider/parque-escuro.jpg" alt="parque" />
-                    </div>
-                    <div class="photoWrapper">
-                        <img class='photo' src="./img/slider/jardim-botanico.jpg"alt="jardim botanico" />
-                    </div>
-                    <div class="photoWrapper">
-                        <img class='photo' src="./img/slider/dedge.jpg" alt="dedge" />
-                    </div>
+            <div class="container1">
+                <div class="photoWrapper">
+                    <img class='photo' src="./img/slider/bosuqe.jpg" alt="bosque" />
                 </div>
+                <div class="photoWrapper">
+                    <img class='photo' src="./img/slider/parque-escuro.jpg" alt="parque" />
+                </div>
+                <div class="photoWrapper">
+                    <img class='photo' src="./img/slider/jardim-botanico.jpg" alt="jardim botanico" />
+                </div>
+                <div class="photoWrapper">
+                    <img class='photo' src="./img/slider/dedge.jpg" alt="dedge" />
+                </div>
+            </div>
         </div>
-    
+
     </div>
     <footer class="rodape2">
         <p class="fim">Copyright &copy; Traveller 2021 </p>
