--- a/quemSomos.html
+++ b/quemSomos.html
@@ -28,7 +28,8 @@
                 <img src="img/grupo/logo.png" alt="panaceia">
                 <h5>Panace I.A</h5>
             </div>
-            <p class="tamanho">Somos um grupo de estudantes universitários do curso de Análise e Desenvolvimento de Sistemas denominado
+            <p class="tamanho">Somos um grupo de estudantes universitários do curso de Análise e Desenvolvimento de
+                Sistemas denominado
                 Panace I.A</p>
             <div class="box2">
                 <div class="card">
