--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -90,11 +90,11 @@
                                 <li> Preços a partir de : R$ 7,00</li>
                                 <li>Telefone para contato: (11) 3055-4702 ou 3055-4700</li>
                                 <li> Site: <a href="https://www.hotelunique.com/pt/restaurante-bar/skye/"
-                                    target="_blank">www.restaurante-bar/skye</a></li>
+                                        target="_blank">www.restaurante-bar/skye</a></li>
                             </ul>
                         </div>
                         <div class="btn">
-                            <a href="http://www.hotelunique.com/cardapios"target="_blank" class="textBtn">Confira
+                            <a href="http://www.hotelunique.com/cardapios" target="_blank" class="textBtn">Confira
                                 nosso Cardápio</a>
                         </div>
                     </div>
@@ -130,8 +130,8 @@
                                 <li> Melhor dia para visitação : Quarta</li>
                                 <li> Horários de maior procura : 17:00h - 21:00h(sab)</li>
                                 <li> Preços a partir de : R$ 35,00</li>
-                                <li> Site: <a href="http://www.velosobar.com.br/sobre-o-veloso.php"
-                                        target="_blank">www.velosobar.com.br/sobre-o-veloso.php</a>
+                                <li> Site: <a href="http://www.velosobar.com.br/index.php"
+                                        target="_blank">www.velosobar.com.br</a>
                                 </li>
                             </ul>
                         </div>
